# aloha-cosmos

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.modal.txt
docs/: index.html
docs/static/css/: index.css
src/aloha_cosmos/: __init__.py  browse.py  data.py  generate.py  lerobot_adapter.py  train.py  utils.py
src/aloha_cosmos/patch/assets/action_conditioned/lerobot/: inference_params.json
src/aloha_cosmos/patch/cosmos_predict2/experiments/lerobot/: action.py
